feat: add new column functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <h1>TrelloLike</h1>
+      <span id="addColumn">Add New Column</span>
     </header>
     <trello-board></trello-board>
     <script src="./index.js" type="module"></script>
