feat: search keywords for card title & description

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <h1>TrelloLike</h1>
+      <input type="text" id="searchCard" placeholder="Search for keywords..">
       <span id="addColumn">Add New Column</span>
     </header>
     <trello-board></trello-board>
